# poc-rust

./: README.md  comands.txt
hello/src/: helpers.rs  lib.rs  main.rs  operation.rs  operation_test.rs  operations.rs
my_rust_lib/: Cargo.toml
my_rust_lib/src/: lib.rs  lib1.rs  operation.rs
other-lib/: Cargo.toml
other-lib/src/: lib.rs
poc-axum/: .env  Cargo.toml  README.md
poc-axum/src/: main.rs
poc-json-serde/: Cargo.toml  README.md
poc-json-serde/src/: main.rs
poc-ls/: Cargo.toml  README.md
poc-ls/src/: main.rs
poc-simple-restapi/: Cargo.toml  README.md
poc-tcp-client/: Cargo.toml  Readme.md
poc-tcp-client/src/: barra.rs  main.rs  nomain.rs  omar.rs
poc-tcp-server/: Cargo.toml  Readme.md
poc-tcp-server/src/: main.rs
rest-api2/: Cargo.toml  README.md
rest-api2/src/: main.rs
some-tests/: Cargo.toml
some-tests/src/: lib.rs  main.rs
some-tests/tests/: test.rs  test_arithmetic.rs  test_array_slice.rs  test_asserts.rs  test_borrow.rs  test_borrowing.rs  test_char.rs  test_closure.rs  test_debug_display.rs  test_e_bad.rs  test_e_good.rs  test_e_using_generic_and_traits.rs  test_enum.rs  test_error_handling_panic.rs  test_error_handling_result.rs  test_file.rs  test_for_while_loop.rs  test_function_expression.rs  test_generic.rs  test_good.rs  test_hash_map.rs  test_if.rs  test_iterator.rs  test_lifetime.rs  test_lifetime_elision.rs  test_lifetime_static.rs  test_methods.rs  test_option.rs  test_ownership.rs  test_pattern_matching.rs  test_string.rs  test_struct.rs  test_traits.rs  test_traits_from_try_from.rs  test_tuple.rs  test_vec.rs  (+3 more)
(+2 files in other folders)
