[package]
name = "poc-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features =  ["postgres", "runtime-tokio", "tls-native-tls"]}
tokio = { version = "1.49.0", features = ["full"]}

